--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,32 @@
-body{
-    color: #333;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+body {
+  color: #333;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
 }
 
-.container  {
-    width: 70%;
-    padding: 1em;
-    text-align: left;
-    border: 1px solid #ddd;
-    margin: 0 auto;
+#cabecera {
+  background: #aa8;
+  color: white;
+  margin: 0;
+  padding: 0.5em;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+#tagline {
+  text-transform: capitalize;
+  font-weight: normal;
+}
+
+.container {
+  width: 70%;
+  padding: 1em;
+  text-align: left;
+  border: 1px solid #ddd;
+  margin: 0 auto;
 }
 
 #container h1 {
-    font-size: 20px;
+  font-size: 20px;
 }
