--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,17 @@
 body{
     color: #333;
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.container  {
-    width: 70%;
-    padding: 1em;
-    text-align: left;
-    border: 1px solid #ddd;
-    margin: 0 auto;
+.container {
+  width: 70%;
+  padding: 1em;
+  text-align: left;
+  border: 1px solid #ddd;
+  margin: 0 auto;
 }
 
 #container h1 {
-    font-size: 20px;
+  font-size: 20px;
 }
