--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,6 @@ body {
   font-weight: normal;
 }
 
-
 .container {
   width: 70%;
   padding: 1em;
@@ -28,6 +27,6 @@ body {
   margin: 0 auto;
 }
 
-#container h1 {
+#cont¡ainer h1 {
   font-size: 20px;
 }
