--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   color: #333;
   text-align: center;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
 }
 
@@ -12,6 +12,13 @@ body {
   padding: 0.5em;
   text-transform: uppercase;
   font-weight: bold;
+  
+}
+
+#cabecera img,
+#cabecera h3 {
+  display: inline-block;
+  vertical-align: middle;
 }
 
 #tagline {
@@ -21,6 +28,7 @@ body {
 
 .container {
   width: 70%;
+  max-width: 960px;
   padding: 1em;
   text-align: left;
   border: 1px solid #ddd;
