--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,22 @@ body {
   text-align: left;
   border: 1px solid #ddd;
   margin: 0 auto;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #container h1 {
   font-size: 20px;
+  color: rgb(51, 51, 49);
+}
+
+
+#post {
+  overflow: hidden;
+  margin: 1em;
+}
+
+#post img {
+  float: left;
+
+  margin: 0em 1em 1em 0;
 }
