--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,11 @@ body {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
+  background-color: beige;
 }
 
 #cabecera {
-  background: #aa8 !important;
+  background: rgb(29, 7, 155) !important;
   color: white;
   margin: 0;
   padding: 0.5em;
@@ -19,6 +20,11 @@ body {
 #cabecera h3 {
   display: inline-block;
   vertical-align: middle;
+}
+#cabecera img {
+  width:35px;
+  height: auto;
+  padding-right: 1em;
 }
 
 #tagline {
@@ -34,6 +40,7 @@ body {
   border: 1px solid #ddd;
   margin: 0 auto;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: white;
 }
 
 #container h1 {
@@ -45,6 +52,7 @@ body {
 #post {
   overflow: hidden;
   margin: 1em;
+ 
 }
 
 #post img {
