--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
 .container {
   width: 70%;
   max-width: 960px;
-  padding: 1em;
+
   text-align: left;
   border: 1px solid #ddd;
   margin: 0 auto;
@@ -51,4 +51,19 @@ body {
   float: left;
 
   margin: 0em 1em 1em 0;
+}
+
+
+footer {
+  font-size: 14px;
+  text-align: center;
+  background-color: #777;
+  color: #fff;
+  padding: 1em;
+
+}
+
+footer p {
+  padding: 0;
+  margin: 0;
 }
